--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div id="js-playerPickElement" class="container">
         <div class="row text-center">
-            <butto id="js-playerPick_rock" class="btn">
+            <button id="js-playerPick_rock" class="btn">
       <span class="badge">
         <i class="fa fa-hand-rock-o" aria-hidden="true"></i>
       </span>
@@ -85,7 +85,11 @@
         Wynik gracza
       </span>
             </div>
-            <div class="col-xs-2"></div>
+            <div class="col-xs-2">
+                <span id="js-remisResult">
+
+                </span>
+            </div>
             <div class="col-xs-5 text-center">
       <span id="js-computerResult">
         Wynik komputera
